<resources>
    <string name="app_name">MyTodoList</string>
    <string name="save">Sauvegarder</string>
    <string name="update">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="id">Id</string>
    <string name="name">Nom</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="task_id">Id de tâche</string>
    <string name="task_name">Titre</string>
    <string name="task_description">Description</string>
    <string name="task_dateOption">Ne pas mettre de date</string>
    <string name="add">Ajouter une tâche</string>
    <string name="todo">Tâches à faire</string>
    <string name="late">Tâches en retard</string>
    <string name="done">Tâches terminées</string>
    <string name="back">Retour</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>