<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    tools:context=".AddTaskActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:text="@string/add"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textSize="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <EditText
            android:id="@+id/t_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:hint="@string/task_name" />

        <EditText
            android:id="@+id/t_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:hint="@string/task_description" />

        <DatePicker
            android:id="@+id/t_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <CheckBox
            android:id="@+id/checkbox_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/task_dateOption" />
    </LinearLayout>
</LinearLayout>
